<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="enter_amt">Enter Total Bill Amount:</string>
    <string name="select_tip">Select Tip Percentage:</string>
    <string name="split_bill">Number of People Splitting Bill:</string>
    <string name="tip_total">Tip Total Per Person</string>
    <string name="bill_total">Total Amount Per Person</string>
    <string name="p10">10%</string>
    <string name="p12">12%</string>
    <string name="p15">15%</string>
    <string name="p17">17%</string>
    <string name="p20">20%</string>
    <string name="p23">23%</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
