<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.wwu.corotaa.tipcalculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#dbd2c8">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:columnCount="3"
        android:alignmentMode="alignBounds"
        android:rowCount="20"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/titleView"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:textAlignment="center"
            android:textColor="#5fc30e"
            android:textStyle="bold"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textSize="40sp"
            android:textIsSelectable="false"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/initView"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/enter_amt"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight=".5"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_columnWeight="1"
            android:textStyle="italic" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/initBill"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_columnWeight="1"
            android:background="@android:drawable/editbox_background_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/split_bill"
            android:id="@+id/splitView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_columnWeight="1"
            android:textStyle="italic" />

        <Space
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_rowWeight=".5"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splitCount"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="1"
            android:layout_columnWeight="1" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekSplit"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:max="9"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_tip"
            android:id="@+id/tipView"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_columnWeight="1"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10"
            android:id="@+id/p10"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p12"
            android:id="@+id/p12"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p15"
            android:id="@+id/p15"
            android:layout_row="8"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p17"
            android:id="@+id/p17"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p20"
            android:id="@+id/p20"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p23"
            android:id="@+id/p23"
            android:layout_row="9"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3"
            android:layout_margin="2dp" />

        <Space
            android:layout_row="10"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_rowWeight=".5"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip_total"
            android:id="@+id/tipTitle"
            android:layout_row="13"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_rowWeight="0"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tipReport"
            android:layout_row="14"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="0.00"
            android:layout_columnWeight="1"
            android:background="@android:drawable/editbox_background_normal" />

        <Space
            android:layout_row="15"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bill_total"
            android:id="@+id/billTitle"
            android:layout_row="16"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_rowWeight="0"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/billReport"
            android:layout_row="17"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="0.00"
            android:layout_columnWeight="1"
            android:background="@android:drawable/editbox_background_normal" />

        <Space
            android:layout_row="18"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetButton"
            android:layout_row="19"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold"
            android:textColor="#020202"
            android:background="#29cbb3" />

        <Space
            android:layout_row="19"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium" />

        <Space
            android:layout_row="19"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@android:style/TextAppearance.DeviceDefault.Medium" />

    </GridLayout>
</RelativeLayout>
